--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "export": "next export"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
